# STM32-bare-metal-templates

./: LICENSE  README.md
ADC DMA/: Makefile
ADC DMA/Core/Src/: main.c
ADC/Core/Src/: main.c
Clear_Template_CMake/: CMakeLists.txt
Clear_Template_CMake/CMake/: arm-none-eabi.cmake  cortex-m4.cmake
Clear_Template_CMake/Core/Src/: CMakeLists.txt  main.cpp
GPIO Input/Core/Src/: main.c
GPIO Output/Core/Src/: main.c
TIM time-base/Core/Src/: main.c
